--- a/fabric/sempy.ipynb
+++ b/fabric/sempy.ipynb
@@ -39,9 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tenant_id = '5cd64994-64c0-4c59-bca6-801527b1a508'\n",
-    "client_id = '80c581f3-02d7-4bbf-b371-8a61b80740ba'\n",
-    "client_secret = '4fH8Q~QaZi28gMGTGhP5PM7ZKBKvrJFXrtYLFbzp'"
+    "tenant_id = os.getenv('tenant_id')\n",
+    "client_id = os.getenv('client_id')\n",
+    "client_secret = os.getenv('client_secret')"
    ]
   },
   {
