--- a/fabric/workspace.ipynb
+++ b/fabric/workspace.ipynb
@@ -15,13 +15,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tenant_id = '5cd64994-64c0-4c59-bca6-801527b1a508'\n",
-    "client_id = '80c581f3-02d7-4bbf-b371-8a61b80740ba'\n",
-    "client_secret = '4fH8Q~QaZi28gMGTGhP5PM7ZKBKvrJFXrtYLFbzp'"
+    "tenant_id = os.getenv('tenant_id')\n",
+    "client_id = os.getenv('client_id')\n",
+    "client_secret = os.getenv('client_secret')"
    ]
   },
   {
