--- a/fabric/test_utils.ipynb
+++ b/fabric/test_utils.ipynb
@@ -36,6 +36,63 @@
     "    name='test'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import struct\n",
+    "from itertools import chain, repeat\n",
+    "\n",
+    "import pyodbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_endpoint = \"sre5mxgamrmuzpfgqakspmnfba-qof5ppqwvtoevjs2ev6jxgnd6y.datawarehouse.fabric.microsoft.com\" # copy and paste the SQL endpoint from any of the Lakehouses or Warehouses in your Fabric Workspace\n",
+    "database = \"lake1\" # copy and paste the name of the Lakehouse or Warehouse you want to connect to\n",
+    "\n",
+    "connection_string = f\"Driver={{ODBC Driver 17 for SQL Server}};Server={sql_endpoint},1433;Database=f{database};Encrypt=Yes;TrustServerCertificate=No\"\n",
+    "\n",
+    "token_as_bytes = bytes(get_token(), \"UTF-8\") # Convert the token to a UTF-8 byte string\n",
+    "encoded_bytes = bytes(chain.from_iterable(zip(token_as_bytes, repeat(0)))) # Encode the bytes to a Windows byte string\n",
+    "token_bytes = struct.pack(\"<i\", len(encoded_bytes)) + encoded_bytes # Package the token into a bytes object\n",
+    "attrs_before = {1256: token_bytes} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InterfaceError",
+     "evalue": "('28000', '[28000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Login failed due to invalid authentication methods. (18456) (SQLDriverConnect); [28000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Login failed due to invalid authentication methods. (18456)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInterfaceError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m connection \u001b[38;5;241m=\u001b[39m \u001b[43mpyodbc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconnection_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattrs_before\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mattrs_before\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mInterfaceError\u001b[0m: ('28000', '[28000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Login failed due to invalid authentication methods. (18456) (SQLDriverConnect); [28000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Login failed due to invalid authentication methods. (18456)')"
+     ]
+    }
+   ],
+   "source": [
+    "connection = pyodbc.connect(connection_string, attrs_before=attrs_before)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
