--- a/fabric/group.ipynb
+++ b/fabric/group.ipynb
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "'26761c9b-5f00-4ef9-9bfe-4dd40f882a01'"
+       "1"
       ]
      },
      "execution_count": 2,
@@ -231,7 +231,50 @@
     }
    ],
    "source": [
-    "lake_get_id('lake1')"
+    "check_user_exist(1,'ty.le@dataverse.com.vn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=group_add_member('lake1',['usertest1@dataverse.com.vn', 'ty.le@dataverse.com.vn', 'the.nguyen@dataverse.com.vn'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"error\":{\"code\":\"Request_BadRequest\",\"message\":\"One or more added object references already exist for the following modified properties: \\'members\\'.\",\"innerError\":{\"date\":\"2024-10-29T06:03:23\",\"request-id\":\"2fc91dd4-1c7d-4bcf-86c7-ddf23727aa1b\",\"client-request-id\":\"2fc91dd4-1c7d-4bcf-86c7-ddf23727aa1b\"}}}'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql+psycopg2://odoo:odoo@localhost:5433/odoo')\n",
+    "df = pd.read_sql( \n",
+    "    f\"\"\"\n",
+    "        select \n",
+    "        count(*) num\n",
+    "        from public.requests a\n",
+    "        join public.ms_user_requests_rel b on a.id = b.requests_id \n",
+    "        join public.ms_user c on b.ms_user_id = c.id\n",
+    "        where \n",
+    "        a.state = 'approved' \n",
+    "        and a.id <> {request_id}\n",
+    "        and c.\"name\" = '{username}'\n",
+    "    \"\"\" , \n",
+    "    con=engine \n",
+    ").to_json(orient='records')"
    ]
   },
   {
@@ -447,6 +490,80 @@
    ],
    "source": [
     "loop.run_until_complete(testdef())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.sql import text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 1 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); COMMIT\n",
+      "                    \n",
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 2 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); COMMIT\n",
+      "                    \n",
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 3 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); COMMIT\n",
+      "                    \n"
+     ]
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql+psycopg2://odoo:odoo@localhost:5433/odoo')\n",
+    "with engine.connect() as con:\n",
+    "    for line in [1,2,3]:\n",
+    "        query_str = f\"\"\"\n",
+    "                    merge into lakehouse_ms_user_rel a using (select {21} lakehouse_id, {line} ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); COMMIT\n",
+    "                    \"\"\"\n",
+    "        con.execute(text(query_str))\n",
+    "        print(query_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 1 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); select 1\n",
+      "                    \n",
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 2 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); select 1\n",
+      "                    \n",
+      "\n",
+      "                    merge into lakehouse_ms_user_rel a using (select 21 lakehouse_id, 3 ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); select 1\n",
+      "                    \n"
+     ]
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql+psycopg2://odoo:odoo@localhost:5433/odoo')\n",
+    "with engine.connect() as con:\n",
+    "    for line in [1,2,3]:\n",
+    "        query_str = f\"\"\"\n",
+    "                    merge into lakehouse_ms_user_rel a using (select {21} lakehouse_id, {line} ms_user_id) b on a.lakehouse_id = b.lakehouse_id and a.ms_user_id = b.ms_user_id when not matched then insert (lakehouse_id, ms_user_id) values (b.lakehouse_id, b.ms_user_id); select 1\n",
+    "                    \"\"\"\n",
+    "        con.execute(text(query_str))\n",
+    "        print(query_str)"
    ]
   },
   {
